--- a/assets/my.css
+++ b/assets/my.css
@@ -19,7 +19,7 @@ body section h2 {
 
 main h1{
   text-align:center;
-  font-family: cursive;
+  font-family: 'Protest Revolution';
   margin: 50px;
   font-size:40px;
 
